--- a/index.html
+++ b/index.html
@@ -1,19 +1,113 @@
-<html>
+<style>
+    ul.top-navbar{
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+        position: fixed;
+        top: 10px;
+        width: 99%;
+    }
+    li.top-navbar-left{
+        float:left;
+        display: block;
+        padding: 14px;
+    }
+    li.top-navbar-right{
+        float:right;
+        display: block;
+        padding: 14px;
+    }
+    .signin {
+        background-color: #4285F4 ;
+        border-radius: 4px;
+        color: white;
+    }
+    ul.bottom-navbar{
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+        position: fixed;
+        bottom: 10px;
+        width: 100%;
+        background-color: #cccccc;
+    }
+    li.bottom-navbar-left{
+        float:left;
+        display: block;
+        padding: 14px;
+    }
+    li.bottom-navbar-right{
+        float:right;
+        display: block;
+        padding: 14px;
+    }
+    .container  {
+        display:flex;
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        align-items: center;
+        justify-content: center;
+}
+    .logo {
+        position: absolute;
+        top: 140px;
+        display: flex;
+        flex-direction: column;
+}
+    .search-bar {
+        position: absolute;
+        top: 240px;
+        display: flex;
+        flex-direction: column;
+        width: 300px;
+        border: 1px solid #dcdcdc;
+        border-radius: 30px;
+}
+    .search-buttons {
+        position: absolute;
+        top: 30px;
+        display: flex;
+        justify-content: space-between;
+        width: 300px;
+        flex-direction: row;
+}
+</style>
 
-    <head>
-        <title>Google</title>
-    </head>
+<div>
+<div>
+    <ul class="top-navbar">
+        <li class="top-navbar-left">About</li>
+        <li class="top-navbar-left">Store</li>
+        <li class="top-navbar-right signin">Sign in</li>
+        <li class="top-navbar-right">Images</li>
+        <li class="top-navbar-right">Gmail</li>
+    </ul>
+</div>
 
-    <body>
-        <button>About</button>
-        <button>Store</button>
-        <button>Gmail</button>
-        <button>Images</button>
-        <button>Sign in</button>
-        <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="google logo">
-        <input type="text">
-        <button>Google search</button>
-        <button>I'm Feeling Lucky</button>
-    </body>
+<div class="container">
+    <div class="logo">
+        <img id="GoogleLogo" src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="google logo">
+    </div>
 
-    </html>
+    <div class="search-bar">
+     <input type="text" placeholder=""
+    </div>
+
+    <div class="search-buttons">
+        <button>Google Search</button>
+        <button>I'm Feeling Lucky  </button>
+    </div>
+    
+</div>
+
+<div>
+    <ul class="bottom-navbar">
+        <li class="bottom-navbar-left">Advertising</li>
+        <li class="bottom-navbar-left">Business</li>
+        <li class="bottom-navbar-left">How Search works</li>
+        <li class="bottom-navbar-right">Settings</li>
+        <li class="bottom-navbar-right">Terms</li>
+        <li class="bottom-navbar-right">Privacy</li>
+</div>
+</div>
