--- a/index.html
+++ b/index.html
@@ -26,10 +26,11 @@
         list-style-type: none;
         margin: 0;
         padding: 0;
-        position: fixed;
+        position: absolute;
+        left: -10px;
         bottom: 10px;
         width: 100%;
-        background-color: #cccccc;
+        background-color: #cacaca;
     }
     li.bottom-navbar-left{
         float:left;
