--- a/index.html
+++ b/index.html
@@ -105,12 +105,12 @@
 
     <div class="search-bar">
         <span class="material-icons">search</span>
-        <input style="width: 460px" type="text" placeholder="">
+        <input style="width: 460px; border: none" type="text" placeholder="">
     </div>
 
     <div class="search-buttons">
-        <button>Google Search</button>
-        <button>I'm Feeling Lucky  </button>
+        <button style="border: none;">Google Search</button>
+        <button style="border: none;">I'm Feeling Lucky  </button>
     </div>
     
 </div>
