--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
     </div>
 
     <div class="search-buttons">
-        <button style="border: none;">Google Search</button>
-        <button style="border: none;">I'm Feeling Lucky  </button>
+        <button style="border: none; background-color: white;">Google Search</button>
+        <button style="border: none; background-color: white;">I'm Feeling Lucky  </button>
     </div>
     
 </div>
